I do as they tell me
Hello World in CodeSchool Course

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>HomePage of GabriCodeSchool</title>
   </head>
   <body>
-
-    Hello, my name is Gabri :)
-    
+    <h1><small>Hello, my name is Gabri :)</small></h1>
+    <ul>
+      <li>Free courses</li>
+      <li>PHP</li>
+      <li>frameworks</li>
+    </ul>
   </body>
 </html>
