Hello Code School
Change text h1 tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HomePage of GabriCodeSchool</title>
   </head>
   <body>
-    <h1><small>Hello, my name is Gabri :)</small></h1>
+    <h1><small>Hello, Code School!</small></h1>
     <ul>
       <li>Free courses</li>
       <li>PHP</li>
